fixing scrollbar issue

--- a/app/website/css/styles.css
+++ b/app/website/css/styles.css
@@ -11,6 +11,10 @@ body {
   margin: 0;
 }
 
+.no-overflow {
+    overflow: hidden;
+}
+
 .nounderline:hover {
     text-decoration: none;
     text-decoration-line: none;
